"made instructions more clear"

--- a/dashboard.html
+++ b/dashboard.html
@@ -178,7 +178,7 @@ $(document).ready(function() {
   <h2>Enter your own XboxAPI ID or select a link on the side to skip this and use mine</h2>
   <input type="text" id="idInput" value=""><br>
   <input id="idButton" type="submit" value="Set ID">
-  <p>After submitting your XboxAPI ID select a link to view different parts of your account</p>
+  <p>After submitting your XboxAPI ID select a link to view different parts of your account<br>(This is not your GamerTag, to get your ID go to xboxapi.com)</p>
 </div>
 <div class="profContent" id="profileContent">
 </div>
